--- a/manga_db/webGUI/templates/auth/register.html
+++ b/manga_db/webGUI/templates/auth/register.html
@@ -1,13 +1,34 @@
 {% extends "layout.html" %}
 {% block body %}
-<script type="text/javascript" src="{{ url_for('static', filename='selectize.min.js') }}"></script>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='selectize.bootstrap3.css') }}" />
-<form id=register_user action="{{ url_for('auth.register') }}" method=post>
-    {{ csrf_token_field() }}
-    <h3>Register</h3>
-    <label>Username: <input type=text class="selectize-input" name=username /></label><br/>
-    <label>Password: <input type=password class="selectize-input" name=password /></label>
-    <div class=row-no-margin><button type=submit class="button green-color
-    button-leftmost">Submit</button></div>
-</form>
+<section class="section">
+    <div class="container">
+        <div class="columns">
+            <div class="column is-5">
+                <form id=login_user action="{{ url_for('auth.register') }}" method=post>
+                    {{ csrf_token_field() }}
+                    <h1 class="title">Register</h1>
+                    <div class="field">
+                        <div class="control">
+                            <label class="lablel">Username: </label>
+                            <input type=text class="input" name=username placeholder="Username" />
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="control">
+                            <label class="lablel">Password: </label>
+                            <input type=password class="input" name=password placeholder="*****"/>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="control">
+                            <button type=submit class="button green-color">
+                                Register
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
