changed all font sizes to rem changed overlay button to be more in line with other buttons added blur to overlay background fixed no search result msg not being centered

--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -11,8 +11,8 @@
 {% endif %}
 <section class="section">
     <div class="container">
+        {% if books %}
         <div class="book-grid" id="searchResult">
-            {% if books %}
             {% for book in books %}
             <div class="book-grid-item
             {% if book.read_status is not none %}
@@ -71,10 +71,12 @@
 
             {% endfor %}
 
-            {% else %}
-            <em>Unbelievable.  No entries here so far</em>
-            {% endif %}
         </div>
+        {% else %}
+        <div style="width: 100%;text-align: center;">
+            <em>Unbelievable.  No entries here so far</em>
+        </div>
+        {% endif %}
     </div>
 </section>
 
