--- a/manga_db/webGUI/sass/style.scss
+++ b/manga_db/webGUI/sass/style.scss
@@ -88,8 +88,7 @@ $tag-background-color: $grey-darker;
 $tag-color: $text;
 
 body {
-    //font-family: 'Open Sans',sans-serif!important;
-    //color: #fff;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -641,11 +640,11 @@ $book-grid-fullhd-cols: 6;
     left: 0;
     width: 100%;
     height: 100%;
-    font-size: 22px;
+    font-size: 1.25rem;
     font-weight: bold;
     font-family: 'Open Sans',sans-serif;
     text-align: center;
-    color: #fff;
+    color: $text;
     background: rgba(0,0,0,.5);
 }
 .book-grid-item .overlay-data {
@@ -656,11 +655,11 @@ $book-grid-fullhd-cols: 6;
 }
 .book-grid-item .overlay-data .overlay-artist {
     margin-bottom: .2rem;
-    font-size: 18px;
+    font-size: 1.15rem;
     font-weight: 600;
 }
 .book-grid-item .overlay-data .overlay-pages {
-    font-size: 14px;
+    font-size: .85rem;
 }
 .book-grid-item .overlay-data .overlay-rate {
     color: #44a6f2;
@@ -672,22 +671,23 @@ $book-grid-fullhd-cols: 6;
     color: #ffe000!important;
 }
 .book-grid-item .overlay-button {
+    @extend .button;
+    background-color: transparent;
     position: absolute;
     left: 0;
     right: 0;
     bottom: .75rem;
-    padding: .5rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    font-size: 18px;
+    font-size: 1.25rem;
     color: #fff!important;
     border: 2px solid #fff;
 }
 .book-grid-item .overlay-button:hover {
-    background-color: #44a6f2;
+    background-color: $blue;
 }
 .book-grid-item.read .overlay-button:hover {
-    background-color: #31c131!important;
+    background-color: $mdb-green!important;
 }
 .book-grid-item.reading .overlay-button:hover {
     background-color: #ffe000!important;
@@ -701,7 +701,7 @@ $book-grid-fullhd-cols: 6;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
     color: #fff;
-    font-size: 14px;
+    font-size: 0.9rem;
     width: 100%;
     /* height: 30px; */
     /* max-height: 70px; */
@@ -790,6 +790,9 @@ $book-grid-fullhd-cols: 6;
 }
 .book-grid-item-cover:hover .ribbon.fav {
     display: none;
+}
+.book-grid-item-cover:hover img {
+    filter: blur(2px);
 }
 .addon-button {
     margin-right: 0;
